improve and restyle auth links

--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -8,5 +8,7 @@
         <input type="email" matInput #passwordResetEmail required>
     </mat-form-field><br>
     <button (click)="this.authService.forgotPassword(passwordResetEmail.value)" type="submit" mat-raised-button color="primary">Reset Password</button><br>
-    <a routerLink="/login"> Go back to login</a>
+    <a class="auth-link" routerLink="/login"> Go back to login</a>
 </form>
+
+<!-- TODO Form validation -->
