--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -21,5 +21,5 @@
     <br>
     <button mat-raised-button color="primary" type="submit">Sign Up</button>
     <button mat-raised-button color="secondary" (click)="authService.googleAuth()">Continue with Google</button><br>
-    <a (click)="this.utils.redirectToLogin()">Already have an account?</a><br>
+    <a class="auth-link" (click)="this.utils.redirectToLogin()">Already have an account?</a><br>
 </form>
