--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,17 @@ fieldset {
     --warn-col: #F44A3E;
     // Custom colors
     --error-col: #F7C600;
+    --link-col: #2c49eb;
+}
+
+.auth-link {
+    color: var(--link-col);
+    font-size: 12px;
+    text-decoration: none;
+    cursor: pointer;
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 .dialog-wrapper {
