forgot-password form validation and minor improvement to verify email

--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,14 +1,12 @@
 <h2>Reset Password</h2>
-<p class="text-center">Please enter your email address to request a password reset.</p>
+<p>Please enter your email address to request a password reset.</p>
 
-<form action="" onsubmit="return false;">
-
+<form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
     <mat-form-field appearance="outline">
         <mat-label>Email</mat-label>
-        <input type="email" matInput #passwordResetEmail required>
+        <input formControlName="email" autocomplete="off" type="email" matInput required>
+        <mat-error *ngIf="this.forgotPasswordForm.invalid">*Please enter your email address</mat-error>
     </mat-form-field><br>
-    <button (click)="this.authService.forgotPassword(passwordResetEmail.value)" type="submit" mat-raised-button color="primary">Reset Password</button><br>
+    <button type="submit" mat-raised-button color="primary">Reset Password</button><br>
     <a class="auth-link" routerLink="/login"> Go back to login</a>
 </form>
-
-<!-- TODO Form validation -->
