restyle verify-email and style improvements

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,8 @@
-<div class="content">
+<div class="content fullscreen">
     <div class="left-section"></div>
 
     <div class="right-section">
-        <h1>Sign in to account</h1>
+        <h2 class="auth-headline">Sign in to account</h2>
         <div class="login-wrapper">
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <mat-form-field appearance="outline">
