change button type on account

--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -23,7 +23,7 @@
         </div>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-stroked-button color="primary" (click)="this.authService.logOut()">Log Out</button>
-        <button mat-stroked-button color="basic" (click)="this.openEditUserDialog()">Edit Profile</button>
+        <button mat-raised-button color="primary" (click)="this.authService.logOut()">Log Out</button>
+        <button mat-raised-button color="basic" (click)="this.openEditUserDialog()">Edit Profile</button>
     </mat-card-actions>
 </mat-card>
