--- a/src/app/components/dialog-add-customer/dialog-add-customer.component.html
+++ b/src/app/components/dialog-add-customer/dialog-add-customer.component.html
@@ -2,48 +2,59 @@
     <mat-progress-bar *ngIf="this.firestoreService.loading" mode="indeterminate"></mat-progress-bar>
     <h1 mat-dialog-title>Add Customer</h1>
     <div mat-dialog-content>
-        <form action="">
+        <form [formGroup]="addCustomerForm" (ngSubmit)="onSubmit()">
             <fieldset>
                 <legend>General</legend>
                 <div class="form-row">
                     <mat-form-field appearance="fill">
                         <mat-label>First Name</mat-label>
-                        <input [(ngModel)]="this.firestoreService.customerToAdd.firstName" [disabled]="this.firestoreService.loading" name="firstName" matInput>
+                        <input formControlName="firstName" type="text" matInput required>
                         <mat-icon matSuffix>person</mat-icon>
-                        <!-- <mat-hint>*Required</mat-hint> -->
+                        <mat-error *ngIf="this.addCustomerForm.invalid">
+                            * Please enter a first name
+                        </mat-error>
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>Last Name</mat-label>
-                        <input [(ngModel)]="this.firestoreService.customerToAdd.lastName" [disabled]="this.firestoreService.loading" name="lastName" matInput>
+                        <input formControlName="lastName" type="text" matInput required>
                         <mat-icon matSuffix>person</mat-icon>
-                        <!-- <mat-hint>*Required</mat-hint> -->
+                        <mat-error *ngIf="this.addCustomerForm.invalid">
+                            * Please enter a last name
+                        </mat-error>
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>Date of Birth</mat-label>
-                        <input [(ngModel)]="this.firestoreService.dateOfBirth" [disabled]="this.firestoreService.loading" name="dateOfBirth" matInput [matDatepicker]="picker">
+                        <input formControlName="dateOfBirth" matInput [matDatepicker]="picker" placeholder="MM/DD/YYYY" required>
                         <mat-hint>MM/DD/YYYY</mat-hint>
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-datepicker #picker></mat-datepicker>
+                        <mat-error *ngIf="this.addCustomerForm.invalid">
+                            * Please enter a date of birth
+                        </mat-error>
                     </mat-form-field>
                 </div>
                 <div class="form-row">
                     <mat-form-field appearance="fill">
                         <mat-label>Phone number</mat-label>
-                        <input [(ngModel)]="this.firestoreService.customerToAdd.phoneNumber" [disabled]="this.firestoreService.loading" name="phoneNumber" matInput>
+                        <input formControlName="phoneNumber" type="text" matInput required>
                         <mat-icon matSuffix>call</mat-icon>
-                        <!-- <mat-hint>*Required</mat-hint> -->
+                        <mat-error *ngIf="this.addCustomerForm.invalid">
+                            * Please enter a phone number
+                        </mat-error>
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>Email</mat-label>
-                        <input [(ngModel)]="this.firestoreService.customerToAdd.email" [disabled]="this.firestoreService.loading" name="email" matInput>
+                        <input formControlName="email" type="email" matInput required>
                         <mat-icon matSuffix>mail</mat-icon>
-                        <!-- <mat-hint>*Required</mat-hint> -->
+                        <mat-error *ngIf="this.addCustomerForm.invalid">
+                            * Please enter an email address
+                        </mat-error>
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>Website</mat-label>
-                        <input [(ngModel)]="this.firestoreService.customerToAdd.website" [disabled]="this.firestoreService.loading" name="website" matInput>
+                        <input formControlName="website" type="text" matInput>
                         <mat-icon matSuffix>language</mat-icon>
-                        <mat-hint>*Optional</mat-hint>
+                        <mat-hint>* Optional</mat-hint>
                     </mat-form-field>
                 </div>
             </fieldset>
@@ -52,34 +63,42 @@
                 <div class="form-row">
                     <mat-form-field appearance="fill">
                         <mat-label>Street & house number</mat-label>
-                        <input [(ngModel)]="this.firestoreService.customerToAdd.street" [disabled]="this.firestoreService.loading" name="street" matInput>
+                        <input formControlName="street" type="text" matInput required>
                         <mat-icon matSuffix>signpost</mat-icon>
-                        <!-- <mat-hint>*Required</mat-hint> -->
+                        <mat-error *ngIf="this.addCustomerForm.invalid">
+                            * Please enter a street and a house number
+                        </mat-error>
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>Zip Code</mat-label>
-                        <input [(ngModel)]="this.firestoreService.customerToAdd.zipCode" [disabled]="this.firestoreService.loading" name="zipCode" matInput>
+                        <input formControlName="zipCode" type="text" matInput required>
                         <mat-icon matSuffix>location_on</mat-icon>
-                        <!-- <mat-hint>*Required</mat-hint> -->
+                        <mat-error *ngIf="this.addCustomerForm.invalid">
+                            * Please enter a zip code
+                        </mat-error>
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>City</mat-label>
-                        <input [(ngModel)]="this.firestoreService.customerToAdd.city" [disabled]="this.firestoreService.loading" name="city" matInput>
+                        <input formControlName="city" type="text" matInput required>
                         <mat-icon matSuffix>location_city</mat-icon>
-                        <!-- <mat-hint>*Required</mat-hint> -->
+                        <mat-error *ngIf="this.addCustomerForm.invalid">
+                            * Please enter a city
+                        </mat-error>
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>Country</mat-label>
-                        <input [(ngModel)]="this.firestoreService.customerToAdd.country" [disabled]="this.firestoreService.loading" name="country" matInput>
+                        <input formControlName="country" type="text" matInput required>
                         <mat-icon matSuffix>flag</mat-icon>
-                        <!-- <mat-hint>*Required</mat-hint> -->
+                        <mat-error *ngIf="this.addCustomerForm.invalid">
+                            * Please enter a street and a country
+                        </mat-error>
                     </mat-form-field>
                 </div>
             </fieldset>
+            <div mat-dialog-actions>
+                <button mat-button (click)="this.dialogRef.close()">Cancel</button>
+                <button type="submit" color="primary" mat-button cdkFocusInitial>Add</button>
+            </div>
         </form>
-    </div>
-    <div mat-dialog-actions>
-        <button mat-button (click)="this.dialogRef.close()">Cancel</button>
-        <button (click)="this.firestoreService.addCustomer(); this.dialogRef.close()" color="primary" mat-button cdkFocusInitial>Save</button>
     </div>
 </div>
