change alt text for website and remove required

--- a/src/app/components/dialog-edit-customer/dialog-edit-customer.component.html
+++ b/src/app/components/dialog-edit-customer/dialog-edit-customer.component.html
@@ -52,7 +52,7 @@
                     </mat-form-field>
                     <mat-form-field appearance="fill">
                         <mat-label>Website</mat-label>
-                        <input formControlName="website" type="text" matInput required>
+                        <input formControlName="website" type="text" matInput>
                         <mat-icon matSuffix>language</mat-icon>
                         <mat-hint>* Optional</mat-hint>
                     </mat-form-field>
