--- a/src/app/components/account/account.component.scss
+++ b/src/app/components/account/account.component.scss
@@ -4,6 +4,9 @@
     align-items: center;
     gap: 16px;
     margin: 0;
+    strong {
+        color: var(--gray-col);
+    }
 }
 
 .profile-picture {
@@ -19,7 +22,7 @@
     align-items: flex-start;
     margin-bottom: 16px;
     strong {
-        color: var(--primary-col);
+        color: var(--gray-col);
         font-weight: 400;
         border-bottom: solid 1px rgba(0, 0, 0, .12);
         margin-bottom: 4px;
