--- a/src/app/components/customer-detail/customer-detail.component.scss
+++ b/src/app/components/customer-detail/customer-detail.component.scss
@@ -27,7 +27,11 @@
     justify-content: center;
     align-items: flex-start;
     h2 {
+        color: var(--gray-col);
         margin: 0;
+    }
+    strong {
+        color: var(--gray-col);
     }
 }
 
@@ -38,11 +42,11 @@
     border-bottom: solid 1px rgba(0, 0, 0, .12);
     margin-bottom: 16px;
     mat-icon {
-        color: var(--primary-col);
+        color: var(--gray-col);
     }
     h2 {
         margin: 0;
-        color: var(--primary-col);
+        color: var(--gray-col);
     }
 }
 
@@ -52,6 +56,7 @@
     border-bottom: dashed 1px rgba(0, 0, 0, .12);
     strong {
         width: 164px;
+        color: var(--gray-col);
         font-weight: 400;
     }
     span {
