alt text for guest email address

--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -15,7 +15,7 @@
         </div>
         <div class="data-row">
             <strong>Email: </strong>
-            <span>{{user.email}}</span>
+            <span>{{user.email ? user.email : '-'}}</span>
         </div>
         <div class="data-row">
             <strong>Email Verified: </strong>
