--- a/src/app/components/customer-detail/customer-detail.component.html
+++ b/src/app/components/customer-detail/customer-detail.component.html
@@ -79,7 +79,7 @@
     </mat-card>
 
     <div class="customer-actions">
-        <button (click)="openEditCustomerDialog(this.customerId)" color="primary" mat-raised-button>Edit</button>
-        <button (click)="openDeleteCustomerDialog(this.customerId)" color="warn" mat-raised-button>Delete</button>
+        <button (click)="openEditCustomerDialog()" color="primary" mat-raised-button>Edit</button>
+        <button (click)="openDeleteCustomerDialog()" color="warn" mat-raised-button>Delete</button>
     </div>
 </div>
