--- a/src/app/components/dialog-add-customer/dialog-add-customer.component.html
+++ b/src/app/components/dialog-add-customer/dialog-add-customer.component.html
@@ -96,8 +96,8 @@
                 </div>
             </fieldset>
             <div mat-dialog-actions>
-                <button mat-button (click)="this.dialogRef.close()">Cancel</button>
-                <button type="submit" color="primary" mat-button cdkFocusInitial>Add</button>
+                <button mat-button (click)="this.dialogRef.close()" title="Cancel">Cancel</button>
+                <button type="submit" color="primary" mat-button cdkFocusInitial title="Add">Add</button>
             </div>
         </form>
     </div>
