--- a/src/app/components/dialog-edit-customer/dialog-edit-customer.component.html
+++ b/src/app/components/dialog-edit-customer/dialog-edit-customer.component.html
@@ -96,8 +96,8 @@
                 </div>
             </fieldset>
             <div mat-dialog-actions>
-                <button (click)="this.dialogRef.close()" mat-button>Cancel</button>
-                <button type="submit" color="primary" mat-button cdkFocusInitial>Save</button>
+                <button (click)="this.dialogRef.close()" mat-button title="Cancel">Cancel</button>
+                <button type="submit" color="primary" mat-button cdkFocusInitial title="Save">Save</button>
             </div>
         </form>
     </div>
