--- a/src/app/components/dialog-guest-user/dialog-guest-user.component.html
+++ b/src/app/components/dialog-guest-user/dialog-guest-user.component.html
@@ -6,5 +6,5 @@
         <input formControlName="displayName" type="text" placeholder="Display Name" minlength="3" matInput required>
         <mat-error *ngIf="this.guestLoginForm.invalid">*Please enter a display name</mat-error>
     </mat-form-field>
-    <button color="primary" type="submit" mat-raised-button>Login</button>
+    <button color="primary" type="submit" mat-raised-button title="Login">Login</button>
 </form>
