--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -7,6 +7,6 @@
         <input formControlName="email" autocomplete="off" type="email" matInput required>
         <mat-error *ngIf="this.forgotPasswordForm.invalid">*Please enter your email address</mat-error>
     </mat-form-field><br>
-    <button type="submit" mat-raised-button color="primary">Reset Password</button><br>
-    <a class="auth-link" routerLink="/login"> Go back to login</a>
+    <button type="submit" mat-raised-button color="primary" title="Reset Password">Reset Password</button><br>
+    <a class="auth-link" routerLink="/login" title="Back to login">Back to login</a>
 </form>
