--- a/src/app/components/dialog-auth-errors/dialog-auth-errors.component.html
+++ b/src/app/components/dialog-auth-errors/dialog-auth-errors.component.html
@@ -9,5 +9,5 @@
     <p><strong>Error Code: </strong> {{ this.authService.authErrorCode? this.authService.authErrorCode : '' }}</p>
 </div>
 <div mat-dialog-actions>
-    <button (click)="this.dialogRef.close()" color="primary" mat-button cdkFocusInitial>Ok</button>
+    <button (click)="this.dialogRef.close()" color="primary" mat-button cdkFocusInitial title="Close">Close</button>
 </div>
